# SimpleRPC

./: CMakeLists.txt  README.md
documents/uml/: architecture.plantuml  classArchitectrue.plantuml  connectSequence.plantuml  dataFlow.plantuml  sessionClass.plantuml
example/: CMakeLists.txt  main.cpp
example/client/: CMakeLists.txt  asioClientExample.cpp  clientExample.cpp
example/server/: CMakeLists.txt  asioServerExample.cpp  serverExample.cpp
example/testCode/: CMakeLists.txt  message_test.cpp
include/: srpc.hpp
include/simpleRPC/: srpc.hpp
include/simpleRPC/srpc/: serverHandle.hpp  session.hpp  tcpClient.hpp  tcpServer.hpp  udpServer.hpp
include/simple_rpc/srpc/: code.hpp
include/srpc/: AsyncSession.hpp  Client.hpp  ClientHandle.hpp  ClientSession.hpp  Common.hpp  Creator.hpp  Message.hpp  RPCService.hpp  Server.hpp  ServerHandle.hpp  ServerSession.hpp  Session.hpp  SyncSession.hpp  TcpClient.hpp  TcpServer.hpp  client.hpp  clientHandle.hpp  code.hpp  common.hpp  message.hpp  server.hpp  serverHandle.hpp  session.hpp  tcpClient.hpp  tcpServer.hpp
include/srpc/helper/: Common.hpp  TaskRunner.hpp
include/srpc/net/: NetCreator.hpp  NetFactory.hpp
include/srpc/net/client/: Client.hpp  TcpClient.hpp
include/srpc/net/message/: Message.hpp
include/srpc/net/server/: Server.hpp  TcpServer.hpp
include/srpc/net/session/: AsyncSession.hpp  ClientSession.hpp  ServerSession.hpp  Session.hpp
include/srpc/rpc/: RPCService.hpp  Stream.hpp
include/srpc/rpc/trait/: TypeTraits.hpp
test/: CMakeLists.txt  message_test.cpp
